--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
@@ -17,7 +17,7 @@ errors.openUrlError=Failed to open URL\: {0}
 errors.openDirError=Unable to open ''{0}''. Maybe it doesn''t exist?
 errors.reportErrorPreface=To report this error, please provide\:\n\n
 errors.genericError=An error has occurred.
-errors.updateRequiredError=Please download a new version of the launcher to continue updating. See skcraft.com for more information.
+errors.updateRequiredError=Please download a new version of the launcher to continue updating. See Lolnet.co.nz for more information
 errors.selfUpdateCheckError=Checking for an update to the launcher has failed.
 
 button.cancel=Cancel
@@ -52,7 +52,7 @@ instance.openSaves=View saves
 instance.openResourcePacks=View resource packs
 instance.openScreenshots=View screenshots
 instance.copyAsPath=Copy as path
-instance.forceUpdate=Force update
+instance.forceUpdate=Force update...
 instance.hardForceUpdate=Hard force update...
 instance.deleteFiles=Delete files...
 instance.confirmDelete=Are you sure that you wish to delete ALL THE FILES (screenshots, worlds, configs) for ''{0}''?
@@ -67,8 +67,8 @@ launcher.checkForUpdates=Check for updates
 launcher.options=Options...
 launcher.updateLauncher=Update launcher...
 launcher.downloadUpdates=Download modpack updates
-launcher.title=SKCraft Launcher (v{0})
-launcher.appTitle=SKCraft Launcher
+launcher.title=Lolnet Launcher (v{0})
+launcher.appTitle=Lolnet Launcher
 launcher.refreshList=Refresh list
 launcher.checkingTitle=Getting available modpacks...
 launcher.checkingStatus=Getting available modpacks... Please wait.
@@ -117,8 +117,8 @@ console.pasteFailed=Upload failed\: {0}\n
 console.processEndCode=Process ended with code\: {0}
 console.attachedToProcess=The game is running. Please wait.
 console.forceClose=Force Close
-console.trayTooltip=SKCraft Launcher
-console.trayTitle=SKCraft Launcher
+console.trayTooltip=Lolnet Launcher
+console.trayTitle=Lolnet Launcher
 console.tray.showWindow=Show window
 console.tray.forceClose=Force close...
 console.closeWindow=Close Window
